--- a/pySpriteWorld-forStudents/code/Rapport 3I025.ipynb
+++ b/pySpriteWorld-forStudents/code/Rapport 3I025.ipynb
@@ -83,6 +83,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "p = main.Projet(boardNumber = 2, fps = 5, iterations = 50)\n",
     "p.mainSlicing(goalStates = [(9, 13), (4, 9), (12, 6)], verbose = False)"
@@ -879,11 +886,182 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Nouvelles cartes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### pathfinding4players"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "p = main.Projet(boardName = \"pathfinding4players\", fps = 5)\n",
+    "p.mainSlicing(verbose = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = main.Projet(boardName = \"pathfinding4players\", fps = 8)\n",
+    "p.mainCoopBase(verbose = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = main.Projet(boardName = \"pathfinding4players\", fps = 5)\n",
+    "p.mainTempA(verbose = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = main.Projet(boardName = \"pathfinding4players\", fps = 5)\n",
+    "p.mainTempA_D(verbose = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "32\n",
+    "53\n",
+    "29\n",
+    "31"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### pathfinding8players"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = main.Projet(boardName = \"pathfinding8players\", fps = 5)\n",
+    "p.mainSlicing(verbose = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = main.Projet(boardName = \"pathfinding8players\", fps = 10)\n",
+    "p.mainCoopBase(verbose = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = main.Projet(boardName = \"pathfinding8players\", fps = 5)\n",
+    "p.mainTempA(verbose = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = main.Projet(boardName = \"pathfinding8players\", fps = 5)\n",
+    "p.mainTempA_D(verbose = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "39\n",
+    "108\n",
+    "33\n",
+    "32"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### pathfinding10players"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = main.Projet(boardName = \"pathfinding10players\", fps = 5)\n",
+    "p.mainSlicing(verbose = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = main.Projet(boardName = \"pathfinding10players\", fps = 13)\n",
+    "p.mainCoopBase(verbose = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = main.Projet(boardName = \"pathfinding10players\", fps = 5)\n",
+    "p.mainTempA(verbose = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = main.Projet(boardName = \"pathfinding10players\", fps = 5)\n",
+    "p.mainTempA_D(verbose = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "57\n",
+    "265\n",
+    "40\n",
+    "41"
+   ]
   }
  ],
  "metadata": {
